# doppel-cli

./: .appveyor.yml  .codecov.yml  .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .shellcheckrc  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NEWS.md  README.md  VERSION  analyze.R  analyze.py  build-conda.sh  build.sh  build_conda.sh  demo.sh  publish.sh  pyproject.toml  runtests.sh  setup.cfg  setup.py  test_publish.sh
.ci/: build-conda.sh  check-docs.sh  check_docs.sh  conda-upload.sh  install-test-packages.sh  install_test_packages.sh  lint-py.sh  lint-r-code.R  lint-shell-scripts.sh  lint-todo.sh  lint_py.sh  lint_r.sh  lint_r_code.R  lint_todo.sh  run-analyze-py-coverage.sh  run-integration-tests.sh  run-smoke-tests.sh  run-unit-tests.sh  run_analyze_py_coverage.sh  run_integration_tests.sh  run_smoke_tests.sh  run_unit_tests.sh  setup.sh  test-analyze-r-coverage.R  test-analyze-r.R  test.sh  update-conda-recipe.sh
.ci/analyze_py_tests/: .coveragerc  analyze.py  test_analyze_py.py
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  main.yml  publish-to-pypi.yml  release-drafter.yml
cli/: MANIFEST.in  setup.py
cli/doppel/: cli.py  describe.py  reporters.py
conda-recipe/: meta.yaml
docs/: Makefile  code.rst  conf.py  deps.txt  index.rst
doppel/: DoppelTestError.py  PackageAPI.py  PackageCollection.py  VERSION  __init__.py  cli.py  describe.py  reporters.py
integration_tests/python_tests/: test_analyze.py
integration_tests/r_tests/: test_analyze.R  thing.txt
integration_tests/test-packages/python/pythonspecific/: setup.py
integration_tests/test-packages/python/pythonspecific2/: setup.py
integration_tests/test-packages/python/testpkgdos/: setup.py
integration_tests/test-packages/python/testpkgtres/: setup.py
smoke_tests/: all_r_packages.sh  python_packages  r_packages  run.sh
tests/: test_DoppelTestError.py  test_analyze.py  test_package_api.py  test_package_collection.py  test_reporters.py
tests/testdata/: python_package1.json  r_package1.json
(+43 files in other folders)
