[project]

authors = [
  {name = "James Lamb", email = "jaylamb20@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing"
]
description = "An integration testing framework for testing API similarity of software libraries."
keywords = [
    "api",
    "python-packaging",
    "testing"
]
license = {file = "LICENSE"}
maintainers = [
  {name = "James Lamb", email = "jaylamb20@gmail.com"}
]
name = "doppel-cli"
readme = "README.md"
requires-python = ">=3.8"
version = "0.3.1.99"

[tool.setuptools.package-data]
doppel = [
    "bin/analyze.py",
    "bin/analyze.R"
]

[project.scripts]
doppel-describe = "doppel.describe:main"
doppel-test = "doppel.cli:main"

[project.urls]
homepage = "https://doppel-cli.readthedocs.io/en/latest/"
documentation = "https://doppel-cli.readthedocs.io/en/latest/"
repository = "https://github.com/jameslamb/doppel-cli"
changelog = "https://github.com/jameslamb/doppel-cli/releases"

[build-system]

requires = [
    "setuptools>=63",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.mypy]
exclude = 'docs/conf\.py$|build/*'
explicit_package_bases = true
ignore_missing_imports = true

[tool.pylint.messages_control]

max-line-length = 100
disable = [
  "cyclic-import",
  "duplicate-code",
  "invalid-name",
  "line-too-long",
  "logging-fstring-interpolation",
  "missing-function-docstring",
  "no-value-for-parameter",
  "raise-missing-from",
  "too-few-public-methods",
  "too-many-locals",
  "unspecified-encoding",
  "use-a-generator"
]
